# preprocessor-v0

./: .gitignore  Dockerfile  README.md  alembic.ini  build.sh  create_table.sql  docker-compose.yml  entry.sh  pyproject.toml  run_local.sh
src/migrations/: env.py
src/migrations/versions/: 20240422_004111_4c420ab8eaeb_init_tables.py
src/preprocessor/: main.py  module.py
src/preprocessor/api/: health_router.py  requests.py  responses.py  router.py  static_images_router.py
src/preprocessor/db/: job_repository_sqla.py  records.py
src/preprocessor/services/: job_repository.py  jobs.py  preprocessing_service.py
src/preprocessor/services/garment_extractor/: commands.py
src/preprocessor/services/human_segmentator/: __init__.py  inference.py
src/preprocessor/services/human_segmentator/networks/: deeplab_xception.py  deeplab_xception_synBN.py  deeplab_xception_transfer.py  deeplab_xception_universal.py  gcn.py  graph.py
src/preprocessor/services/human_segmentator/utils/: util.py
src/preprocessor/services/pose_extractor/: __init__.py  render_posenet.py  run_densepose.py  run_posenet.py
src/preprocessor/services/pose_extractor/densepose/converters/: chart_output_hflip.py
src/preprocessor/services/pose_extractor/densepose/engine/: trainer.py
src/preprocessor/services/pose_extractor/densepose/evaluation/: d2_evaluator_adapter.py  densepose_coco_evaluation.py  evaluator.py  mesh_alignment_evaluator.py
src/preprocessor/services/pose_extractor/densepose/structures/: data_relative.py  list.py  mesh.py
testdata/: run_create_job.sh
(+14 files in other folders)
